public enum Dirs {
    SOUTH,
    EAST,
    NORTH,
    WEST
}
