import java.awt.*;

public abstract class LoadableCar extends Car {

    public LoadableCar(int drs, Color clr, double engPow, String modName) {
        super(drs, clr, engPow, modName);
    }


}
