public class Main {
    public static void main(String[] args) {
        CCFactory Factory = new CCFactory();
        Factory.create();
    }
}